--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <link rel="SHORTCUT ICON" href="img/favicon.ico" />
     <link rel="apple-touch-icon" href="img/marta_touch_aw.png" />
-    <title>marta.io</title>
+    <title>Marta for Everyone</title>
 
     <link href="lib/ionic/css/ionic.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
